# ownia-platform

./: .gitignore  README.md  index.html  netlify.toml  package-lock.json  package.json  supabase-schema.sql
blockchain/: Anchor.toml  WHITEPAPER.md  WHITEPAPER_EN.md  package-lock.json  package.json
blockchain/migrations/: deploy.ts
blockchain/programs/ownia-token/: Cargo.toml
blockchain/programs/ownia-token/src/: constants.rs  errors.rs  lib.rs
blockchain/programs/ownia-token/src/instructions/: cast_vote.rs  claim_rewards.rs  claim_vesting.rs  create_proposal.rs  create_vesting.rs  initialize.rs  initialize_stake_pool.rs  mint_tokens.rs  mod.rs  stake.rs  unstake.rs
blockchain/programs/ownia-token/src/state/: config.rs  governance.rs  mod.rs  staking.rs  vesting.rs
blockchain/tests/: ownia-token.ts
netlify/functions/: auth-login.js  auth-resend.js  auth-signup.js  auth-verify.js  dashboard.js  loan-create.js  loan-deposit-confirm.js  payment-approve.js  payment-request.js  utils.js
public/: app.js  index.html  style.css
src/: App.tsx  index.css
src/components/: AdminRoute.tsx  CityMap.tsx  GridHeatmap.tsx  Layout.tsx  ProtectedRoute.tsx  SignaturePad.tsx
src/context/: AuthContext.tsx
src/pages/: Admin.tsx  Agreement.tsx  BankInfo.tsx  Complete.tsx  Dashboard.tsx  Home.tsx  LandMap.tsx  Login.tsx  Participate.tsx  Register.tsx  TherapyCoupon.tsx  VerifyEmail.tsx
src/types/: land.ts
src/utils/: gridAllocation.ts
supabase/functions/send-agreement/: index.ts
supabase/migrations/: 001_initial_schema.sql  002_land_schema.sql
