[package]
name = "ownia-token"
version = "0.1.0"
description = "OWNIA Token - AI-Driven Navigational Economy on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "ownia_token"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.32.1" }
